--- a/fe/src/components/Requests.css
+++ b/fe/src/components/Requests.css
@@ -1,9 +1,13 @@
 .compensation-background {
-  height: 800px;
+  position: absolute;
+
+  height: 850px;
+  width: 600px;
 }
 
 .compensation-container {
-  position: absolute;
+  position: fixed;
+  z-index: 99;
   width: 100%;
   height: 70px;
   left: 0px;
@@ -31,18 +35,6 @@
   height: 50px;
   margin: auto;
   padding: 8px;
-}
-
-.menu-col {
-  box-sizing: content-box;
-  width: 260px;
-  height: 800px;
-  top: 59px;
-  padding-left: 0px;
-
-  border-right: 1.5px solid #848484;
-  background-color: #FFFFFF;
-    
 }
 
 .menu {
@@ -163,7 +155,7 @@
 
   position: absolute;
   width: 560px;
-  height: 630px;
+  height: 650px;
   left: 160px;
   top: 90px;
   
@@ -243,8 +235,6 @@
   left: 30px;
   top: 190px;
 
-  font-family: 'Inter';
-  font-style: normal;
 
 
 }
@@ -269,13 +259,19 @@
 
 .calendar {
   position: absolute;
-  width: 1000px;
-  top: 430px;
-  left: 10px;
+  width: 497px;
+  top: 370px;
+  left: 30px;
 }
 
 .jss14 {
   margin-top: 480px;
+}
+
+.start-time {
+  width: 120px;
+  top: 440px;
+  left: 30px;
 }
 
 .jss15 {
@@ -283,26 +279,17 @@
   margin-left: 270px;
 }
 
+.end-time {
+  left: 180px;
+}
+
 .btn-Sent {
   position: absolute;
   width: 130px;
   height: 45px;
   left: 400px;
-  top: 560px;
+  top: 460px;
 
-  background: #A855F7;
-  border: 0.9px solid #A855F7;
-  border-radius: 5px;
-
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 19px;
-  align-items: center;
-  text-align: center;
-
-  color: #FFFFFF;
 }
 
 
