--- a/fe/src/components/Requests.css
+++ b/fe/src/components/Requests.css
@@ -1,6 +1,5 @@
 .compensation-background {
   position: absolute;
-
   height: 850px;
   width: 600px;
 }
@@ -12,17 +11,14 @@
   height: 70px;
   left: 0px;
   top: 0px;
-  
   background: #FFFFFF;
   box-shadow: 0px 4px 4px gray;
 }
 
 .jss6 {
   color: #848484;
-
   margin-top: -50px;
   margin-left: 60px;
-
   font-family: 'Inter';
   font-style: normal;
   font-weight: 600;
@@ -37,12 +33,11 @@
   padding: 8px;
 }
 
-.menu {
+.menu-left {
   box-sizing: content-box;
   width: 260px;
   height: 810px;
   padding-left: 0px;
-
   border-right: 2px solid #848484;
   background-color: #FFFFFF;
 }
@@ -65,17 +60,16 @@
 
 .jss9 {
   position: absolute;
-  padding-top: 10px;
   height: 40px;
   width: 100px;
-
+  top: 9px;
+  left: 50px;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
   align-items: center;
-
   color: #000000;
 }
 
@@ -125,10 +119,8 @@
   height: 60px;
   left: 300px;
   top: 90px;
-
   background: #FFFFFF;
   box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
-  
   flex-direction: column;
   white-space: nowrap;
 
@@ -137,9 +129,7 @@
 .jss1 {
   padding-left: 20px;
   padding-right: 100px;
-  
   padding-top: 6px
- 
 }
 
 .title1 {
@@ -152,16 +142,13 @@
 
 .jss4 {
   box-sizing: border-box;
-
   position: absolute;
   width: 560px;
-  height: 650px;
+  height: 668px;
   left: 160px;
   top: 90px;
-  
   background: #FFFFFF;
   box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
-  
 }
 
 .jss7 {
@@ -170,7 +157,6 @@
   height: 45px;
   left: 30px;
   top: 10px;
-
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
@@ -178,17 +164,13 @@
   line-height: 20px;
   display: flex;
   align-items: center;
-
   color: gray;
-
 }
 
 .jss10 {
-
   background: #FFFFFF;
   border: 0.9px solid gray;
   border-radius: 5px;
-
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
@@ -196,31 +178,25 @@
   line-height: 19px;
   display: flex;
   align-items: center;
-
   color: #000000;
-
 }
 
-.rectangle {
+.rectangle-request {
   box-sizing: border-box;
-
   position: absolute;
   width: 497px;
   height: 30px;
   left: 30px;
-  top: 50px;
-
+  top: 54px;
 }
 
 .rectangle1 {
   box-sizing: border-box;
-
   position: absolute;
   width: 497px;
   height: 30px;
   left: 30px;
   top: 130px;
-
 }
 
 .jss8 {
@@ -229,14 +205,10 @@
 
 .jss11 {
   box-sizing: border-box;
-
   position: absolute;
   width: 497px;
   left: 30px;
   top: 190px;
-
-
-
 }
 
 .jss12 {
@@ -245,7 +217,6 @@
 
 .rectangle2 {
   box-sizing: border-box;
-
   position: absolute;
   width: 497px;
   height: 30px;
@@ -289,12 +260,4 @@
   height: 45px;
   left: 400px;
   top: 460px;
-
 }
-
-
-
-
-
-
-
