--- a/fe/src/components/Login.css
+++ b/fe/src/components/Login.css
@@ -1,5 +1,4 @@
 .login-background {
-    background-image: url();
     
 }
 
@@ -9,24 +8,21 @@
     height: 65px;
     left: 0px;
     top: 0px;
-    
     background: #FFFFFF;
     box-shadow: 0px 4px 4px gray;
 }
 
 .jss6 {
     color: #848484;
-
     margin-top: -50px;
     margin-left: 60px;
-
     font-family: 'Inter';
     font-style: normal;
     font-weight: 600;
     font-size: 32px;
     line-height: 39px;
     align-items: center;
-   
+
 }
 
 .logo {
@@ -37,7 +33,6 @@
 
 .login-content {
     position: absolute;
-
     box-sizing: border-box;
     width: 380px;
     height: 420px;
@@ -46,98 +41,85 @@
     bottom: 0;
     right: 0;
     left: 0;
-
     padding: 25px;
-
     border: 1px solid #000000;
     border-radius: 20px;
-
     background-color: #FFFFFF;
 }
 
 .text-center {
-    
-    width: 370px;
+    width: 100%;
     height: 60px;
     left: 30px;
     top: 40px;
-
     font-family: 'Inter';
     font-style: normal;
     font-weight: 600;
     font-size: 32px;
     line-height: 39px;
     align-items: center;
-
     color: #000000;
 }
 
-.text-username, .text-password {
-
+.text-username,
+.text-password {
     margin: 30px 0;
-    
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
     line-height: 24px;
     align-items: center;
-
     color: #000000;
-
 }
 
 .rectangle {
-   
     width: 320px;
     height: 35px;
-    display: block; 
-    margin-left: auto; 
+    display: block;
+    margin-left: auto;
     margin-right: auto;
-    margin-top: -15px;
-
+    margin-top: 10px;
     background: #FFFFFF;
     border: 0.9px solid #6B7280;
     border-radius: 8px;
-
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
     line-height: 24px;
     align-items: center;
-
     color: #000000;
-   
+
+    padding-left: 10px;
 }
 
 .text-forgot {
-
     margin-left: 220px;
-
     font-family: 'Inter';
     font-style: italic;
     font-weight: 400;
     font-size: 16px;
     line-height: 22px;
     align-items: center;
-    
+}
+
+.forgot-pd:hover {
+    cursor: pointer;
 }
 
 .btn-login {
-
     width: 320px;
     height: 35px;
     left: 0px;
     top: 0px;
-    display: block; 
-    margin-left: auto; 
+    display: block;
+    margin-left: auto;
     margin-right: auto;
-
     background: #9333EA;
+    opacity: 0.8;
     border: 0.9px solid #9333EA;
     border-radius: 8px;
-
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -145,8 +127,31 @@
     line-height: 20px;
     align-items: center;
     text-align: center;
-    
-    color: #FFFFFF;    
+    color: #FFFFFF;
+}
+
+.btn-login:hover {
+    cursor: pointer;
+    opacity: 1;
+}
+
+.error {
+    display: flex;
+    align-items: stretch;
+    margin-top: 6px;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    align-items: center;
+    text-align: center;
+    color: red;
+}
+
+.error-icon {
+    margin-left: 6px;
 }
 
 
