--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+    font-size: 16px;
+  }
+  :root {
+    --menu-left-width: 20vw;
+    --header-height: 70px;
+    --body-margin-top: calc(100% - var(--header-height));
+    --body-width: calc(100vw - var(--menu-left-width));
+  }
