--- a/fe/src/public/css/header-component.css
+++ b/fe/src/public/css/header-component.css
@@ -3,7 +3,7 @@
     z-index: 99;
     /* position: relative; */
     width: 100%;
-    height: 70px;
+    height: var(--header-height);
     top: 0;
     left: 0;
     display: flex;
