--- a/fe/src/public/css/form-request.css
+++ b/fe/src/public/css/form-request.css
@@ -39,7 +39,7 @@
   height: 46px;
   left: 30px;
   top: 10px;
-  font-size: 18px;
+  font-size: 1rem;
   display: flex;
   align-items: center;
   color: gray;
