--- a/fe/src/public/css/list-personal.css
+++ b/fe/src/public/css/list-personal.css
@@ -79,7 +79,7 @@
 }
 
 .btn-add-personal {
-    width: 10rem;
+    width: 11rem;
     height: 2rem;
     left: 0px;
     top: 0px;
@@ -88,7 +88,7 @@
     opacity: 0.8;
     border: 0.9px solid #9333EA;
     border-radius: 8px;
-    
+    justify-content: center;
     font-size: 20px;
    
     align-items: center;
