--- a/fe/src/public/css/personal-information.css
+++ b/fe/src/public/css/personal-information.css
@@ -1,14 +1,9 @@
 .personal-inf {
-    /* position: relative;
-    width: 100%;
-    height: 100%;
-    left: 18rem;
-    top: 6rem; */
-
     position: relative;
-    width: calc(var(--body-width) - 4rem);
-    top: calc(var(--header-height) + 4rem);
+    width: calc(var(--body-width));
+    top: calc(var(--header-height));
     left: var(--menu-left-width);
+    padding: 2rem 6vw;
 }
 
 .personal-inf-name{
@@ -20,13 +15,11 @@
     display: flex;
     align-items: center;
     flex-direction: row;
-    margin-left: 2.8rem;
-
     padding: 18px 10px;
 }
 
 .body-personal-inf-left {
-    width: 16rem;
+    width: 18vw;
     height: 20rem;
     display: flex;
     align-items: center;
@@ -60,13 +53,13 @@
 }
 
 .personal-inf-left-username {
+    margin-left: 0.6rem;
     margin-top: 3.8rem;
 }
 
 .personal-inf-left-password {
     margin-top: 4px;
 }
-
 
 .details-name {
     position: absolute;
@@ -78,8 +71,9 @@
     margin-left: 10px;
     background: #FFFFFF;
     box-shadow: 0px 4px 4px gray;
-    width: 40rem;
+    width: 50vw;
     height: 20rem;
+    box-sizing: border-box;
 }
 
 .body-personal-inf-right {
@@ -121,16 +115,23 @@
     left: 410px;
 }
 .personal-inf-bottom{
-    margin-left: 20rem;
-    padding-top: 1rem;
+    margin-left: calc(18vw + 10px);
+    padding: 18px 10px;
     background: #FFFFFF;
     box-shadow: 0px 4px 4px gray;
-    width: 40rem;
-    height: 18rem;
+    width: 50vw;
+    height: 16rem;
+    box-sizing: border-box;
+}
+
+.personal-inf-title {
+    font-size: 24px;
+    font-weight: bold;
+    margin-left: 1.8rem;
 }
 
 .personal-inf-name {
-    font-size: 24px;
+    font-size: 18px;
     margin-left: 1.8rem;
 }
 
@@ -164,16 +165,14 @@
     
 }
 
-.btn-two {
+/* .btn-two {
     margin-top: 2rem;
-    padding-left: 30rem;
     background: #FFFFFF;
     border-top: 0.2px solid gray;
-    width: auto;
     height: 4rem;
     display: flex;
     align-items: center;
-    justify-content:space-around;
+    justify-content:flex-end;
 }
 
 .btn-exit,
@@ -193,7 +192,11 @@
     color: #FFFFFF;
 }
 
+.btn-add {
+    margin-left: 1rem;
+}
+
 .btn-exit:hover, .btn-add:hover {
     cursor: pointer;
     opacity: 1;
-}
+} */
