--- a/fe/src/public/css/login.css
+++ b/fe/src/public/css/login.css
@@ -82,6 +82,14 @@
     padding-left: 10px;
 }
 
+.icon-eye {
+    position: absolute;
+    left: 19.8rem;
+    top: 15.8rem;
+    cursor: pointer;
+
+}
+
 .text-forgot {
     margin-left: 220px;
     font-family: 'Inter';
