--- a/fe/src/public/css/list-personal.css
+++ b/fe/src/public/css/list-personal.css
@@ -1,11 +1,11 @@
-.body-component {
+.list-personal-body-component {
     position: relative;
-    width: var(--body-width);
+    width: calc(var(--body-width) - 2vw);
     top: calc(var(--header-height) + 1rem);
-    left: var(--menu-left-width);
+    left: calc(var(--menu-left-width));
 }
 
-.body-header {
+.list-personal-body-header {
     position: absolute;
     top: 1rem;
     height: 2rem;
@@ -16,16 +16,16 @@
     padding: 0 2.4rem;
 }
 
-.body-header-name {
+.list-personal-body-header-name {
     font-size: 1.4rem;
 }
 
-.body-header-right {
+.list-personal-body-header-right {
     display: flex;
     align-items: center;
 }
 
-.body-header-month-year {
+.list-personal-body-header-month-year {
     display: flex;
     align-items: center;
     margin-right: 2rem;
@@ -54,8 +54,8 @@
     justify-content: space-between;
 }
 
-.body-search-personnel {
-    width: var(--body-width);
+.list-personal-body-search-personnel {
+    width: inherit;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -94,14 +94,14 @@
     opacity: 1;
 }
 
-.view {
+.list-personal-view {
     position: absolute;
-    width: var(--body-width);
+    width: inherit;
     top: 7.6rem;
     padding: 0 0.8rem;
 }
 
-.body-search-item-personnel {
+.list-personal-body-search-item-personnel {
     position: relative;
     margin: 1.8rem 0;
     width: inherit;
