--- a/fe/src/public/css/add-new-personal.css
+++ b/fe/src/public/css/add-new-personal.css
@@ -72,6 +72,8 @@
     display: block;
     text-align: center;
     margin-bottom: 2rem;
+    font-weight: 600;
+    font-size: 1.2rem;
 }
 
 .contract-info-child {
@@ -149,6 +151,8 @@
     display: block;
     text-align: center;
     margin-bottom: 2rem;
+    font-weight: 600;
+    font-size: 1.2rem;
 }
 
 .personal-info-child {
